--- a/dd-cuda-tracer/Makefile
+++ b/dd-cuda-tracer/Makefile
@@ -4,20 +4,16 @@ CXX=g++
 CFLAGS=-Wall -fPIC -shared -ldl
 
 lib: src/lib.cpp
+	if [ ! -d ".build" ]; then mkdir .build; fi
 	$(CXX) -I$(CUDA_PATH)/include $(CFLAGS) -o lib_ddog_cuda.so \
 	src/lib.cpp -L/usr/local/cuda/lib64 -lcudart -ldd_trace_cpp-shared -lcurl
 	mv lib_ddog_cuda.so .build
 
 tracing-lib: src/tracing.cpp
+	if [ ! -d ".build" ]; then mkdir .build; fi
 	$(CXX) -I$(CUDA_PATH)/include $(CFLAGS) -o lib_tracing_ddog_cuda.so \
 	src/tracing.cpp -Iinclude -L/usr/local/cuda/lib64 -lcudart -ldd_trace_cpp-shared -lcurl
 	mv lib_tracing_ddog_cuda.so .build
-
-submodule:
-	cd dd-trace-cpp && \
-	cmake -B .build . && \
-	cmake --build .build -j8 && \
-	cmake --install .build --prefix=.install
 
 example-cuda: examples/cuda/matmul.cu
 	nvcc -g -G -o examples/cuda/matmul examples/cuda/matmul.cu -Iinclude -L.build -cudart shared
@@ -27,4 +23,5 @@ example-integration:
 	LD_PRELOAD=.build/lib_ddog_cuda.so ddtrace-run fastapi dev examples/python/main.py
 
 clean:
-	rm .build/lib_ddog_cuda.so
+	rm -rf .build
+	rm examples/cuda/matmul
